some cosmetic changes

--- a/src/main/resources/config/dev/main.properties
+++ b/src/main/resources/config/dev/main.properties
@@ -15,11 +15,11 @@ db.password = changeme
 # Credentials for Web interface access
 #
 auth.user = admin
-auth.password = 1234
+auth.password = 123energia
 
 # Jetty configuration
 #
-server.host = 127.0.0.1
+server.host = 0.0.0.0
 server.gzip.enabled = false
 
 # Jetty HTTP configuration
